# ert-concierge

./: .gitignore  Cargo.toml  FILESYSTEM.md  PAYLOAD.md  README.md  RUST.md  package-lock.json
api_rs/: Cargo.toml  README.md
api_rs/src/: lib.rs  message.rs  payload.rs
babylonjs-web/: README.md  index.html  package-lock.json  package.json  tsconfig.json  webpack.common.js  webpack.dev.js
babylonjs-web/src/: chat_handler.ts  index.ts  physics_handler.ts  renderer.ts  users_handler.ts
babylonjs-web/src/concierge_api/: handlers.ts  mod.ts  payloads.ts
babylonjs-web/src/index/: index.pug  what.pug
babylonjs-web/src/login/: login.pug  login.scss  login.ts
babylonjs-web/src/overlay/: mod.ts  overlay.scss  overlay.ts
babylonjs-web/src/overlay/chat/: components.tsx  index.ts  mod.ts  react.tsx  style.scss
babylonjs-web/src/overlay/rstyle/: components.tsx  react.tsx  style.scss
babylonjs-web/src/overlay/sidebar/: components.tsx  index.scss  index.ts  mod.ts  react.tsx  style.scss
babylonjs-web/src/overlay/tabbed/: components.tsx  mod.ts  react.tsx  style.scss
babylonjs-web/src/overlay/views/: components.tsx  mod.ts  react.tsx  style.scss
babylonjs-web/src/overlay/window/: dsl.ts  index.scss  index.ts  manager.ts  mod.ts  react.tsx  style.scss
babylonjs-web/src/planetary_sim/: controls.pug  info.pug  payloads.ts  planets_handler.ts  style.scss
babylonjs-web/src/pug/: index.pug
babylonjs-web/src/scss/: overlay.scss  style.scss
babylonjs-web/src/sims/: physics_handler.ts
babylonjs-web/src/sims/planetary_sim/: planets_handler.ts  style.scss
babylonjs-web/src/ts/: chat_handler.ts  concierge_api.ts  index.ts  overlay.ts  physics_handler.ts  planets_handler.ts  renderer.ts  users_handler.ts
babylonjs-web/src/viewer/: about.tsx  chat_handler.ts  renderer.ts  users_handler.ts  viewer.pug  viewer.scss  viewer.ts  viewer.tsx
babylonjs-web/src/viewer/groups/: groups_handler.ts  react.tsx
babylonjs-web/src/viewer/service_impls/: chat_service.ts
babylonjs-web/src/viewer/service_impls/physics_service/: components.tsx  controller.tsx  mod.ts  objects.ts  payloads.ts  utils.ts
babylonjs-web/src/viewer/service_impls/planetary_service/: components.tsx  controller.tsx  mod.ts  objects.ts  payloads.ts  style.scss
babylonjs-web/src/viewer/services/: components.tsx  react.tsx  services_handler.ts
babylonjs-web/src/viewer/sims/: physics_handler.ts
babylonjs-web/src/viewer/sims/physics_sim/: controller.tsx  physics_handler.ts
babylonjs-web/src/viewer/sims/planetary_sim/: controller.tsx  controls.pug  info.pug  payloads.ts  planet_info.pug  planets_handler.ts  planets_handler.tsx  style.scss  sysinfo.pug  system_info.pug
babylonjs-web/src/viewer/users/: components.tsx  react.tsx  users_handler.ts
concierge_api_rs/: Cargo.toml
concierge_api_rs/src/: info.rs  lib.rs  payload.rs  status.rs
docs/: FILES.md  SOCKET.md  TUTORIAL.md
examples/: client.rs  fs_client.rs  raw_ws_client.rs  ws_client.rs
physics_sim/: Cargo.toml  README.md
physics_sim/concierge_bot/: Cargo.toml
physics_sim/concierge_bot/src/: concierge_api.rs  lib.rs  physics_payload.rs  server.rs
physics_sim/physics/src/: polygon.rs  vector.rs
physics_sim/physics/src/ecs/: dynamics.rs  mod.rs
physics_sim/src/: main.rs
physics_sim/src/rendering/: mod.rs  render.rs  sdl_wrapper.rs
planetary_sim/: GravitySystem.py  README.md  Simulation.py  Template.py  collision.py  concierge_bot.py  vector.py
planetary_sim/SavedSystems/: ExampleSystem.json
planetary_sim/SavedSystems/legacy/: ExampleSystem.json  Hydrogen.json  SolarSystem.json
services/: README.md
services/chat_service/: Pipfile  README.md  chat_service.py
services/physics_sim/: Cargo.toml  README.md
services/physics_sim/concierge_bot/: Cargo.toml
services/physics_sim/concierge_bot/src/: service.rs
services/physics_sim/physics/src/ecs/: colliders.rs  mod.rs
services/physics_sim/src/: main.rs
services/planetary_sim/: .gitignore  Pipfile  README.md  body.py  concierge_service.py  gravity_system.py  simulation.py  system_serializer.py
services/planetary_sim/SavedSystems/: Hydrogen.json  SolarSystem.json
sims/physics_sim/: Cargo.toml
sims/physics_sim/concierge_bot/: Cargo.toml
sims/physics_sim/concierge_bot/src/: lib.rs  physics_payload.rs  server.rs  service.rs
sims/physics_sim/physics/: Cargo.toml
sims/physics_sim/physics/src/: collision.rs  lib.rs
sims/physics_sim/physics/src/ecs/: colliders.rs  dynamics.rs  kinetics.rs  mod.rs
sims/physics_sim/src/: main.rs
sims/physics_sim/src/rendering/: mod.rs  sdl_wrapper.rs
sims/planetary_sim/: README.md  body.py  concierge_api.py  concierge_bot.py  system_serializer.py  tmp.json
sims/planetary_sim/SavedSystems/: ExampleSystem.json  Hydrogen.json  SolarSystem.json
src/: clients.rs  concierge.rs  fs.rs  main.rs  payload.rs  server.rs  tests.rs  util.rs  ws.rs
src/concierge/: client.rs  fs.rs  mod.rs  service.rs  ws.rs
tls/: README.md  cert.pem  key.rsa
