[package]
name = "concierge"
version = "0.1.0"
authors = ["An Tran <avarelpm@gmail.com>"]
edition = "2018"

[dependencies]
# Async support
futures = "0.3.5"
# Async runtime
tokio = { version = "0.2", default-features = false, features = ["io-std", "macros", "time", "fs", "rt-threaded", "sync"] }
tokio-util = { version = "0.3.1", default-features = false, features = ["codec"] }
# WebSocket implementation
warp = "0.2"
# Concurrent map, deadlock free for multithreaded peace of mind
dashmap = "4.0.0-rc6" #{ path = "../dashmap", features = ["serde"] }
# Fast multithreaded MPSC channels
flume = "0.7.1"
# Ergonomic error handling
anyhow = "1.0.31"
# Serialization framework
serde_json = "1.0.55"
serde = { version = "1.0.114", features = ["derive"] }
# Logging capabilities
log = "0.4.8"
env_logger = "0.7.1"
# Static file server
hyper = "0.13.6"
# Universally unique identifiers
uuid = { version = "0.8.1", features = ["v4", "serde"] }

# Developer dependences, not present in src code
[dev-dependencies]
url = "2.1.1"
tokio-tungstenite = "0.10"
reqwest = { version = "0.10.6", features = ["stream"] }