[package]
name = "ert_concierge"
version = "0.1.0"
authors = ["An Tran <avarelpm@gmail.com>"]
edition = "2018"

[workspace]
members = [
    "concierge_api_rs",
    "sims/physics_sim",
    "sims/physics_sim/physics",
    "sims/physics_sim/concierge_bot"
]

[dependencies]
# Async support
futures = "0.3.5"
# Async runtime
tokio = { version = "0.2", default-features = false, features = ["io-std", "macros", "time", "fs", "rt-threaded", "sync"] }
tokio-util = { version = "0.3.1", default-features = false, features = ["codec"] }
# WebSocket implementation
warp = { version = "0.2", features = ["tls"] }
# Ergonomic error handling
anyhow = "1.0.31"
# Serialization framework
serde_json = { version = "1.0.56", features = ["raw_value"] }
serde = { version = "1.0.114", features = ["derive"] }
# Logging capabilities
log = "0.4.11"
env_logger = "0.7.1"
# Universally unique identifiers
uuid = { version = "0.8.1", features = ["v4", "serde"] }
# Semantic versioning
semver = "0.10.0"
# Payloads
concierge_api_rs = { path = "./concierge_api_rs" }

# Developer dependences, not present in src code
[dev-dependencies]
url = "2.1.1"
tokio-tungstenite = "0.10"
reqwest = { version = "0.10.6", features = ["stream"] }

[profile.release]
panic = "abort"
lto = true