[package]
name = "ert_concierge"
version = "0.2.0"
authors = ["An Tran <avarelpm@gmail.com>"]
edition = "2018"

[workspace]
members = [
    "concierge_api_rs",
    "sims/physics_sim",
    "sims/physics_sim/physics",
    "sims/physics_sim/concierge_bot"
]

[dependencies]
# Async support
futures = "0.3.5"
# Async runtime
sanitize-filename = "0.2"
# WebSocket implementation
actix-rt = "1.1"
actix = "0.9"
actix-web = "2.0"
actix-web-actors = "2.0"
# Ergonomic error handling
thiserror = "1.0"
# Serialization framework
serde_json = { version = "1.0", features = ["raw_value"] }
serde = { version = "1.0", features = ["derive"] }
# Logging capabilities
log = "0.4"
env_logger = "0.7"
# Universally unique identifiers
uuid = { version = "0.8", features = ["v4", "serde"] }
# Semantic versioning
semver = "0.10.0"
# Payloads
concierge_api_rs = { path = "./concierge_api_rs" }

# Developer dependences, not present in normal code
[dev-dependencies]
tokio = { version = "0.2", default-features = false, features = ["io-std", "macros", "time", "fs", "rt-threaded", "sync"] }
tokio-util = { version = "0.3", default-features = false, features = ["codec"] }
anyhow = "1.0"
url = "2.1.1"
warp = "0.2"
tokio-tungstenite = "0.11"
reqwest = { version = "0.10", features = ["stream"] }
bytes = "0.5"

[profile.release]
panic = "abort"
lto = true