[package]
name = "concierge_api_rs"
version = "0.1.0"
authors = ["An Tran <avarelpm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Serialization framework
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
# Universally unique identifiers
uuid = { version = "0.8.1", features = ["v4", "serde"] }