[package]
name = "physics_concierge_bot"
version = "0.1.0"
authors = ["An Tran <avarelpm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.114", features = ["derive"] }
cs3_physics = { path = "../physics" }
url = "2.1.1"
tokio = { version = "0.2", default-features = false, features = ["net", "sync", "stream"] }
tokio-tungstenite = "0.10"
uuid = { version = "0.8.1", features = ["serde"] }
serde_json = "1.0.55"
futures = "0.3.5"
anyhow = "1.0.31"
concierge_api_rs = { path = "../../concierge_api_rs" }