[package]
name = "physics_sim"
version = "0.1.0"
authors = ["An Tran <avarelpm@gmail.com>"]
edition = "2018"

[dependencies]
cs3_physics = { path = "physics" }
physics_concierge_bot = { path = "concierge_bot" }
tokio = { version = "0.2", default-features = false, features = ["macros", "rt-threaded"] }
ctrlc = "3.1"
uuid = { version = "0.8", features = ["serde"] }